--- a/style.css
+++ b/style.css
@@ -24,14 +24,14 @@ div.block-container.css-18e3th9.egzxvld2 {
   
   /* Row 1 */
   div.css-1r6slb0.e1tzin5v2 {
-      background-color: #EEEEEE;
+      background-color: #6A8D73;
       padding: 3% 3% 3% 3%;
       border-radius: 5px;
   }
   
   /* Row 2 */
   div.css-12w0qpk.e1tzin5v2 {
-      background-color: #DCDCDC;
+      background-color: #E4FFE1;
       padding: 3% 3% 3% 3%;
       border-radius: 5px;
   }
